<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/photo_2023_05_04_18_57_05"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">

    <TextView
        android:id="@+id/bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal"
        android:text="@string/billcal"
        android:textColor="@color/black"
        android:textSize="36sp" />

    <View
        android:layout_width="270dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray" />


    <ImageView
        android:id="@+id/longbill"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:srcCompat="@drawable/shocking_man_long_bill_cartoon_76766018"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/welcomemsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:text="@string/msg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf">

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textamt"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/amt"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editamt"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            tools:ignore="Autofill,InefficientWeight,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textpax"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/numpax"
            android:textSize="20sp"
            android:textColor="@color/black"
            tools:ignore="TextSizeCheck" />


        <EditText
            android:id="@+id/editpaxno"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="123456789"
            android:textColor="@color/black"
            android:inputType="phone"
            tools:ignore="Autofill,InefficientWeight,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/svccharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textOff="@string/svcdisable"
            android:textOn="@string/svcenable"
            android:textColor="@color/darkblue"
            android:backgroundTint="@color/blue"
            tools:ignore="VisualLintButtonSize" />

        <ToggleButton
            android:id="@+id/gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/gstdisable"
            android:textOn="@string/gstenable"
            android:textColor="@color/darkblue"
            android:backgroundTint="@color/blue"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textdisc"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/disc"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editdisc"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:digits="1234567890"
            android:inputType="phone"
            tools:ignore="Autofill,InefficientWeight,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payment"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/pay"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <RadioGroup
            android:id="@+id/paymentmode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radiobtncash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_weight="0.5"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/radiobtnpaynow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynow"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_weight="0.5"
                tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/lightgreen"
            android:text="@string/split"
            android:textColor="@color/green"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,TextSizeCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/lightred"
            android:text="@string/reset"
            android:textColor="@color/red"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalbill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/bill"
            android:textColor="@color/black"
            android:textSize="20dp"
            tools:ignore="SpUsage,TextSizeCheck" />

        <TextView
            android:id="@+id/payableperpax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/payable"
            android:textColor="@color/black"
            android:textSize="20dp"
            tools:ignore="SpUsage,TextSizeCheck,TextSizeCheck" />
    </LinearLayout>


</LinearLayout>